<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    android:background="#333333"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity" >

    <!-- 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    wrap_content-->
    <!-- wrap_content -->

    <LinearLayout
        android:layout_width="490dp"
        android:layout_height="27dp"
        android:layout_weight="0.0" >

        <!--  -->

        <TextView
            android:id="@+id/label_dev_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dev_name"
            android:textColor="#cccccc" />

        <EditText
            android:id="@+id/edit_dev_name"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/dev_name_hint"
            android:minHeight="20dp"
            android:text="@string/dev_name"
            android:textColor="#cccccc"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="normal"
            android:typeface="serif" />
        <!--  -->

        <TextView
            android:id="@+id/label_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_row"
            android:textColor="#cccccc" />

        <EditText
            android:id="@+id/edit_row"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:ems="10"
            android:hint="@string/dev_name_hint"
            android:minHeight="20dp"
            android:text="@string/edit_row"
            android:textColor="#cccccc"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="normal"
            android:typeface="serif" />
        <!--  -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="483dp"
        android:layout_height="32dp" >

        <TextView
            android:id="@+id/label_flash_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_flash_path"
            android:textColor="#cccccc" />

        <EditText
            android:id="@+id/edit_flash_path"
            android:layout_width="300dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/dev_name_hint"
            android:minHeight="20dp"
            android:text="@string/edit_flash_path"
            android:textColor="#cccccc"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="normal"
            android:typeface="serif" >
        </EditText>

        <TextView
            android:id="@+id/label_col"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_col"
            android:textColor="#cccccc" />

        <EditText
            android:id="@+id/edit_col"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/dev_name_hint"
            android:minHeight="20dp"
            android:text="@string/edit_col"
            android:textColor="#cccccc"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="normal"
            android:typeface="serif" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp" >

        <TextView
            android:id="@+id/label_path_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_path_name"
            android:textColor="#cccccc"
            android:textColorLink="@android:color/holo_blue_light" />

        <EditText
            android:id="@+id/edit_file_path"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/dev_name_hint"
            android:minHeight="20dp"
            android:text="@string/edit_file_path"
            android:textColor="#cccccc"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="normal"
            android:typeface="serif" >

            <!--  -->

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/label_senid_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_senid_index"
            android:textColor="#cccccc" />

        <EditText
            android:id="@+id/edit_senid_index"
            android:layout_width="90dp"
            android:layout_height="38dp"
            android:layout_weight="0.09"
            android:ems="10"
            android:hint="@string/dev_name_hint"
            android:minHeight="20dp"
            android:text="@string/edit_senid_index"
            android:textColor="#cccccc"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="normal"
            android:typeface="serif" >

            <!--  -->
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp" >

        <TextView
            android:id="@+id/label_fw_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_fw_ver"
            android:textColor="#cccccc" />

        <EditText
            android:id="@+id/edit_fw_ver"
            android:layout_width="213dp"
            android:layout_height="33dp"
            android:ems="10"
            android:hint="@string/dev_name_hint"
            android:minHeight="20dp"
            android:text="@string/edit_fw_ver"
            android:textColor="#cccccc"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="normal"
            android:typeface="serif" >
        </EditText>

        <TextView
            android:id="@+id/label_driver_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_driver_ver"
            android:textColor="#cccccc" />

        <EditText
            android:id="@+id/edit_driver_ver"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/driver_ver_hint"
            android:minHeight="25dp"
            android:text="@string/driver_ver"
            android:textColor="#cccccc"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="normal"
            android:typeface="serif" />

        <!-- match_parent -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp" >

        <TextView
            android:id="@+id/label_APK_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_APK_ver"
            android:textColor="#cccccc" />

        <EditText
            android:id="@+id/edit_APK_ver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:ems="10"
            android:hint="@string/dev_name_hint"
            android:inputType="textMultiLine"
            android:text="@string/edit_APK_ver"
            android:textColor="#cccccc"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="normal"
            android:typeface="serif" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >
        <!-- android:orientation="vertical" -->

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:text="@string/btn_connect"
            android:textColor="#ffffff"
            android:typeface="serif" />
        <!--   -->

        <TextView
            android:id="@+id/label_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/label_connect"
            android:textColor="#cccccc"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="503dp"
        android:layout_height="31dp" >

        <Spinner
            android:id="@+id/spinner_select_item"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="#555555" />

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:layout_width="499dp"
        android:layout_height="36dp"
        android:stretchColumns="6" >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_flash_write"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="25dp"
                android:text="@string/btn_flash_write"
                android:textSize="16dp"
                android:typeface="serif" />
            <!-- style="?android:attr/borderlessButtonStyle" -->

            <Button
                android:id="@+id/btn_flash_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="25dp"
                android:text="@string/btn_flash_read"
                android:textSize="16dp"
                android:typeface="serif" />

            <Button
                android:id="@+id/btn_info_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="25dp"
                android:text="@string/btn_info_get"
                android:textSize="16dp"
                android:typeface="serif" />

            <Button
                android:id="@+id/btn_default_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="25dp"
                android:text="@string/btn_default_get"
                android:textSize="16dp"
                android:typeface="serif" />

            <Button
                android:id="@+id/btn_path_name_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="25dp"
                android:text="@string/btn_path_name_get"
                android:textSize="16dp"
                android:typeface="serif" />
        </TableRow>
    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_rst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="15dp"
            android:text="@string/btn_rst"
            android:textSize="16dp"
            android:typeface="serif" />

        <Button
            android:id="@+id/btn_rst_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="15dp"
            android:text="@string/btn_rst_high"
            android:textSize="16dp"
            android:typeface="serif" />

        <Button
            android:id="@+id/btn_rst_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="15dp"
            android:text="@string/btn_rst_low"
            android:textSize="16dp"
            android:typeface="serif" />

        <Button
            android:id="@+id/btn_gpio_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="15dp"
            android:text="@string/btn_gpio_high"
            android:textSize="16dp"
            android:typeface="serif" />

        <Button
            android:id="@+id/btn_gpio_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="15dp"
            android:text="@string/btn_gpio_low"
            android:textSize="16dp"
            android:typeface="serif" />
    </TableRow>

    <LinearLayout
        android:layout_width="495dp"
        android:layout_height="59dp"
        android:stretchColumns="6" >

        <Button
            android:id="@+id/btn_mdev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="15dp"
            android:text="@string/btn_mdev"
            android:textSize="16dp"
            android:typeface="normal" />

        <Button
            android:id="@+id/btn_coordinate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="15dp"
            android:text="@string/Cooridnate"
            android:textSize="16dp"
            android:typeface="serif" />

        <Button
            android:id="@+id/btn_mbase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="15dp"
            android:text="@string/btn_mbase"
            android:textSize="16dp"
            android:typeface="serif" />

        <Button
            android:id="@+id/btn_Dev_Finger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="15dp"
            android:text="@string/devFinger"
            android:textSize="16dp"
            android:typeface="serif" />

    </LinearLayout>

</LinearLayout>